--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -1124,7 +1124,7 @@ This sort of example can seem trivial, but in fact second-order logic has many p
 
 \subsection{Modifying Logic}\label{s:modifying}
 
-Another direction we could take is not adding extra expressive resources to logic, but modifying the logic we already have in some way. We've already seen some attempts to do this, when we briefly considered intuitionistic logic and its restrictions on negation elimination in §\ref{construct}. 
+Another direction we could take is not adding extra expressive resources to logic, but modifying the logic we already have in some way. We've already seen some attempts to do this, when we briefly considered intuitionistic logic and minimal logic and their restrictions on negation elimination in §\ref{construct}. 
 
 More recently, influential alternative logics have been explored which result from restricting the structural rules permitted in proofs (§\ref{s:substructural}). These logics, even though they are purely sentential and lack quantifiers, turn out to be very complex and puzzling.
 
