--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -115,9 +115,9 @@ Below (§\ref{fitch}), I will introduce a system for representing natural deduct
 
 Let's look as these initial assumptions. In ordinary reasoning, an assumption is a claim we might be accepting without having a full justification for it. We might believe it, or it might be a supposition that we are making `for the sake of argument'. In natural deduction, which isn't really about belief, assumptions are understood in this second, suppositional, sense. A natural deduction proof begins with a supposed assumption: the rules then tell us what we can derive from this assumption. We can make additional assumptions whenever we like in the course of the proof.
 
-Suppose we have a natural deduction proof. But what is it a proof \emph{of}? Well, the last sentence in the sequence is in some sense where we've ended up:  the result of the proof. It can be considered the conclusion of the proof. But even if there is a proof with conclusion \meta{C}, that doesn't mean that we have proved \meta{C} and should therefore come to believe it. For we have neglected the role of assumptions. Some of the proof rules discharge previously made assumptions, but not every assumption has to be discharged in a correctly formed proof. These remaining `active' or \define{undischarged} assumptions are the suppositions on which the correctness of the proof conclusion depends. So a natural deduction proof is \emph{conditional}: it establishes the conclusion, conditional on the truth of any undischarged assumptions. 
+Suppose we have a natural deduction proof. But what is it a proof \emph{of}? Well, the last sentence in the sequence is in some sense where we've ended up:  the result of the proof. It can be considered the conclusion of the proof. But even if there is a proof with conclusion \meta{C}, that doesn't mean that we have proved \meta{C}, let alone that we should therefore come to believe it. For we have neglected the role of assumptions. Some of the proof rules discharge previously made assumptions, but not every assumption has to be discharged in a correctly formed proof. These remaining `active' assumptions – which we term \define{undischarged} assumptions – are the suppositions on which the correctness of the proof conclusion depends. So a natural deduction proof is \emph{hypothetical}: it establishes the conclusion, assuming the truth of any hypothesised undischarged assumptions. 
 
-This structure establishes a nice relationship between proofs and arguments. \factoidbox{A given proof  is a \define{proof of an argument} $\meta{A}_{1} … \meta{A}_{n} \ttherefore \meta{C}$ iff \begin{enumerate}
+This structure establishes a nice relationship between proofs and arguments. \factoidbox{A given correctly formed proof  is a \define{proof of an argument} $\meta{A}_{1} … \meta{A}_{n} \ttherefore \meta{C}$ iff \begin{enumerate}
 	\item the final sentence in the proof is \meta{C}, and 
 	\item each of the undischarged assumptions in the range of which \meta{C} falls is \emph{among} the premises of the argument $\meta{A}_{i}$. 
 \end{enumerate}}Note that according to this definition if there is a proof of $\meta{A} \ttherefore \meta{C}$, that will also be a proof of $\meta{A},\meta{B} \ttherefore \meta{C}$ – and indeed it will be a proof of any other argument with the conclusion \meta{C} and including \meta{A} as a premise. This is related to the fact that if you have a valid argument, adding extra premises can't make the argument invalid. (Likewise, if you have a correctly constructed proof, making additional assumptions above the first line can't make it incorrect.) 
@@ -1517,11 +1517,11 @@ Regardless of your view of intuitionism, the idea that mathematical objects are 
 
 Constructivists of all stripes think we shouldn't accept the law of excluded middle, because to think that any claim of the form $\meta{A}\eor\enot\meta{A}$ must be true is to think that there is a pre-existing fact of the matter as to whether or not \meta{A} – and there may not be until we have constructed the mathematical objects in question. A mathematical existence proof, for example showing that a number with a certain property exists, must – according to the constructivist – consist in a construction of the specific number in question. We cannot show that some number has a property just by showing that the supposition that no number has that property leads to contradiction. 
 
-When you show that \enot\meta{A} leads to absurdity, you have constructed a proof of $\enot\enot\meta{A}$, but that is \emph{not} the same as a proof of \meta{A} itself. Constructivists thus typically accept the $\enot$I  rule. If you prove $\enot\meta{A}$ by showing that the assumption \meta{A} leads to a contradiction, you have positively constructed an absurdity on the basis of that assumption, and that proof is acceptable. However, constructivists reject the $\enot$E rule. A proof showing that the assumption $\enot\meta{A}$ leads to a contradiction amounts only to a positive construction of $\enot\enot\meta{A}$ – not a construction of \meta{A}. 
+When you show that \enot\meta{A} leads to absurdity, you have constructed a proof of $\enot\enot\meta{A}$, but that is \emph{not} the same as a proof of \meta{A} itself. Constructivists thus typically accept the $\enot$I  rule. If you prove $\enot\meta{A}$ by showing that the assumption \meta{A} leads to a contradiction, you have positively constructed an absurdity on the basis of that assumption, and that proof is acceptable. However, constructivists reject the $\enot$E rule. A proof showing that the assumption $\enot\meta{A}$ leads to a contradiction amounts only to a positive construction of $\enot\enot\meta{A}$ – not a construction of \meta{A}.\footnote{Nevertheless, constructivists accept the rule known as Explosion (§\ref{exfalso}). This is a derived rule in \TFL, but the derivation makes essential use of $\enot$E, so Explosion is added as a separate rule by constructivists. The system that arises when you simply omit the $\enot$E rule and add no alternative rules is known as \define{minimal logic}.}
 
-Constructive logic has some interesting features that our logical system does not. For example, constructive logic is typically understood to have the \define{disjunction property}: \factoidbox{If $\meta{A} \eor \meta{B}$ can be proved from no assumptions, then either \meta{A} can be proved from no assumptions, or  $\meta{B}$  can be proved from no assumptions.} Our logic clearly lacks the disjunction property, as the proof of excluded middle demonstrates: `$P\eor\enot P$' can be proved but neither of its disjuncts is provable. 
+Constructive logic has some interesting features that our logical system does not. For example, constructive logic has the \define{disjunction property}: \factoidbox{If $\meta{A} \eor \meta{B}$ can be proved from no assumptions, then either \meta{A} can be proved from no assumptions, or  $\meta{B}$  can be proved from no assumptions.} Our logic \TFL\ clearly lacks the disjunction property, as the proof of excluded middle demonstrates: `$P\eor\enot P$' can be proved but neither of its disjuncts is provable. 
 
-Constructive and intuitionistic logic is an alternative conception of the nature of logic to that we have advocated. It is typically understood to involve recentering logic around provability rather than truth. So rather than saying `$P\eor\enot P$' is false, constructivists deny that it is provable, and then add that mathematical language should be restricted to what is provable, rather than relying on a Platonistic notion of abstract unworldly truth. The philosophical potential of this alternative way of thinking about logic unfortunately takes us beyond the scope of the present course.\footnote{A brief account of intuitionistic logic and the central role it gives to provability can be found in §§3.1–3.2 of  Rosalie Iemhoff (2020) `Intuitionism in the Philosophy of Mathematics', in Edward N. Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \httpurl{plato.stanford.edu/entries/intuitionism/\#BHKInt}.}
+Constructive and intuitionistic logic rest on an alternative conception of the nature of logic to that we have advocated. It is typically understood to involve recentering logic around provability rather than truth. So rather than saying `$P\eor\enot P$' is false, constructivists deny that it is provable, and then add that mathematical language should be restricted to what is provable, rather than relying on a Platonistic notion of abstract unworldly truth. The philosophical potential of this alternative way of thinking about logic unfortunately takes us beyond the scope of the present course.\footnote{A brief account of intuitionistic logic and the central role it gives to provability can be found in Joan Moschovakis (2024) `Intuitionistic Logic', in Edward N. Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \httpurl{plato.stanford.edu/archives/sum2024/entries/logic-intuitionistic/}.}
 
 
 \keyideas{
@@ -2056,7 +2056,7 @@ The colourfully named principle of \define{explosion} is the rule that from a co
 		\have[l]{c}{\meta{B}}\by{EX}{c1,b}
 	\end{proof}
 	}
-Again, explosion can be emulated using our existing rules:
+Again, explosion can be emulated using our existing rules (note, in light of §\ref{construct}, the use of $\enot$E):
 \begin{proof}
 	\have{a}{\meta{A}}
 	\have{b}{\enot\meta{A}}
@@ -2070,7 +2070,7 @@ Again, explosion can be emulated using our existing rules:
 
 The principle of explosion has been controversial, along with its semantic cousin that inconsistent premises entail anything: $\meta{A},\enot\meta{A}\vDash\meta{B}$. It is easy enough to see that these principles are acceptable in our system of logic, but it is tempting to think they might mark a flaw in \TFL. The derivation above, using negation elimination on a sentence that is completely irrelevant to the inconsistent sentences, can seem like a mere trick. 
 
-This is especially so if you are tempted by the thought that logic and reasoning have some connection (recall §§\ref{ss:reasoning},\ref{sec:arguments_and_reasoning_revisited}). Even the weakest version of a proposed connection between logic and reasoning will tell you that if you accept the premises of a valid argument for good reason, then competent deduction of the conclusion provides a reason to accept the conclusion. Once we acknowledge that we are not logically perfect, and that sometimes we have reasons to accept inconsistent claims, then this feature of \TFL\ means that we have a reason to accept any arbitrary claim $\meta{B}$. And this is absurd: that we've made a mistake in accepting some inconsistent claims $\meta{A},\enot\meta{A}$ is no reason at all to accept $\meta{B}$. So explosion as a derivation rule seems to involve a form of `natural deduction' that no human reasoner would ever follow. 
+This is especially so if you are tempted by the thought that logic and reasoning have some connection (recall §§\ref{ss:reasoning}, \ref{sec:arguments_and_reasoning_revisited}). Even the weakest version of a proposed connection between logic and reasoning will tell you that if you accept the premises of a valid argument for good reason, then competent deduction of the conclusion provides a reason to accept the conclusion. Once we acknowledge that we are not logically perfect, and that sometimes we have reasons to accept inconsistent claims, then this feature of \TFL\ means that we have a reason to accept any arbitrary claim $\meta{B}$. And this is absurd: that we've made a mistake in accepting some inconsistent claims $\meta{A},\enot\meta{A}$ is no reason at all to accept $\meta{B}$. So explosion as a derivation rule seems to involve a form of `natural deduction' that no human reasoner would ever follow. 
 
 It may be denied that we ever have reasons to accept inconsistent claims; but this doesn't stand up to scrutiny. We all rely on a diversity of sources that contribute to the bodies of information on which we rely, and there is no guarantee that the information delivered from one source will be entirely consistent with the information arriving from another. These gathered pieces of information may not even come together in our thought; we may quarantine them in different fragments (they may appear to us to concern different topics) and may not even notice the tension between them.\footnote{For a discussion of this phenomenon, see David Lewis (1982) `Logic for Equivocators', \emph{Noûs} \textbf{16}, pp. 431--41,	 at p. 436.} 
 
