update to release version with doi details

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -31,7 +31,11 @@ This version of \forallxadl\ is current as of \today.
 
 This book is a derivative work created by Antony Eagle, based upon Tim Button's 2016 Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive substantive changes in content, theoretical approach, coverage, and appearance. (For one thing, it's more than twice as long.)
 
-You can find the most up to date version of \forallxadl\ at \httpurl{github.com/antonyeagle/forallx-adl}. 
+You can find the latest release version of \forallxadl\ at:
+
+\begin{center}
+	\href{https://doi.org/10.5281/zenodo.16945666}{\includegraphics{doi.png}}
+\end{center}
 
 The current version of \forallx\ Cambridge is available at \httpurl{github.com/OpenLogicProject/forallx-cam}, which has now also diverged noticeably from the 2016 version. Magnus' original is available at \httpurl{fecundity.com/logic}. 
 
