--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -100,7 +100,7 @@ Our topic is not English grammar. But the idea of a canonical clause is illumina
 \end{description}
 
 
-How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words}, the \define{structural words}. This connects with what we have just been saying, because in many of the examples from §\ref{s:ValidityInVirtueOfForm}, the arguments can be analysed as involving canonical clauses which are linked by the structural words `and', `or', `not', `if … then …' and `… if and only if …'. So our efforts to identify the logical structure of arguments often coincide with linguist's efforts to identify the canonical clauses that constitute the sentences in those arguments – or, at least, constitute some plausible paraphrase or reformulation of those sentences.
+How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words} – the \define{structural words}. This connects with what we have just been saying, because in many of the examples from §\ref{s:ValidityInVirtueOfForm}, the arguments can be analysed as involving canonical clauses which are linked by the structural words `and', `or', `not', `if … then …' and `… if and only if …'. So our efforts to identify the logical structure of arguments often coincide with linguist's efforts to identify the canonical clauses that constitute the sentences in those arguments – or, at least, constitute some plausible paraphrase or reformulation of those sentences.
 
 We can see this if we return to this earlier argument: \begin{earg}
 	\item[] Jenny is either happy or sad.
@@ -149,13 +149,16 @@ The schematic paraphrase `Not A and B' is potentially ambiguous, because it is n
 Sharp-eyed readers will have noticed that our list of special words doesn't precisely line up with the canonical clauses we introduced in §\ref{ss.canonical}. Consider the noncanonical clause `She said that Jenny is sad', in which the canonical clause `Jenny is sad' is subordinate within an indirect speech report. Because `She said that' is not on our special list of words, we cannot analyse this sentence as composed from a canonical clause and some structural expression. So for the purposes of sentential logic, we will treat `She said that Jenny is sad' \emph{as if} it were canonical, even though it is not from the point of view of English grammar. From the point of view of our structural words, this sentence doesn't have any further structure that we can identify. Such \define{quasi-canonical clauses} – clauses that do not feature any of our list of structural words – will also be replaced by placeholder letters in our analysis. 
 
 
-This raises another question. What makes the words on our list special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. In terms of the syntactic trees we drew above, there is a hierarchy of levels when breaking down the top-level sentence into constituent phrases, and different choices of structural words correspond to different choices concerning the level at which to stop our analysis.
+This raises another question. What makes the words on our list special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. In terms of the syntactic trees we drew above, there is a hierarchy of levels when breaking down the top-level sentence into constituent phrases, and different choices of structural words correspond to different choices concerning the level at which to stop our analysis. This pragmatic attitude is represented by the words of the logician Alfred Tarski, introducing something like the modern theory of validity: \begin{quote}
+	Underlying our whole construction is the division of all terms of the language discussed into logical [i.e., structural] and extra-logical. This division is certainly not quite arbitrary. … On the other hand, no objective grounds are known to me which permit us to draw a sharp boundary between the two groups of terms. It seems to be possible to include among logical terms some which are usually regarded by logicians as extra-logical without running into consequences which stand in sharp contrast to ordinary usage. In the extreme case we could regard all terms of the language as logical.\footnote{Alfred Tarski (1936) `On the Concept of Logical Consequence', reprinted at pp. 409–20 in his \emph{Logic, Semantics, Metamathematics}, Hackett 1983 – the quotation appears on pp. 418–19.}
+\end{quote} 
 
-Linguists take a very expansive view of structural words, so that the class of canonical clauses is rather small, and there is a lot of structure to be identified in natural language. For example, the presence of modal auxiliaries (like `will' or `must', as in `James \underline{must} eat'), verb inflections other than the present tense (e.g., `they \underline{took} snuff'), and subordination (as in `\underline{Etta knew that} peaches were abundant'), in addition to items on our list of structural words, suffices to make a clause noncanonical. And there are logics which do take these to be structural words: modal logics, tense logics, and epistemic logics treat these as structural words and provide recipes for the structural analysis of arguments that abstract away features other than these words. But there is no fundamental principle that divides words once and for all into structural words and other words. So logicians are more interested in quasi-canonical clauses, given some fixed list of structural words, when using logic to model or represent natural languages. 
-
-We will start simply, and focus on the list of truth-functional sentence connectives, principally `and', `or', `not', `if … then …' and `… if and only if …'. There are practical reasons why these words are useful ones to focus on initially, which I will now discuss.
+While not quite taking Tarski's `extreme' position, linguists typically have a very expansive view of structural words, so that the class of canonical clauses is rather small, and there is a lot of structure to be identified in natural language. For example, the presence of modal auxiliaries (like `will' or `must', as in `James \underline{must} eat'), verb inflections other than the present tense (e.g., `they \underline{took} snuff'), and subordination (as in `\underline{Etta knew that} peaches were abundant'), in addition to items on our list of structural words, suffices to make a clause noncanonical. And there are logics which do take these to be structural words: modal logics, tense logics, and epistemic logics treat these as structural words and provide recipes for the structural analysis of arguments that abstract away features other than these words. But, as Tarski emphaises, there is no fundamental principle that divides words once and for all into structural words and other words. So logicians are more interested in quasi-canonical clauses, given some fixed chosen list of structural words, when using logic to model or represent natural languages. The pragmatic approach is to look at a particular argument or text one wishes to analyse, and choose as structural words those words which seem to be structuring the author's discussion! This may be more of an art than a science.
 
 \section{Formal Languages}
+
+In our approach, we will start simply, and focus on the list of truth-functional sentence connectives, principally `and', `or', `not', `if … then …' and `… if and only if …'. There are practical reasons why these words are useful ones to focus on initially, because many arguments can be represented fruitfully by taking them to be structured by these expressions. Let me expand.
+
 
 In logic, a \define{formal language} is a language which is particularly suited to representing the structure or form of its sentences. Such languages have a precisely defined \define{syntax}, that allows us to specify without difficulty the grammatical sentences of the language, and they also have a precise \define{semantics} which both tells us what meanings \emph{are} in those languages, and assigns meanings to the sentences and their constituents. 
 
