--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -174,12 +174,12 @@ Some cases are less straightforward. Consider this argument: \begin{earg}
 	\item[] Eating meat causes avoidable suffering.
 	\item[So:] Eating meat is immoral.
 \end{earg}
-Many people will find the premises plausible, and the conclusion therefore compelling. This is part of the case for vegetarianism. But not everyone finds the conclusion acceptable; such people end up finding one or both of the premises should be rejected. Interestingly, people may find themselves still finding the premises attractive even when they recognise a conclusion follows that they cannot accept. Here they may find that there is some reason to accept the premises (perhaps they seem true at first glance), and some reason to reject them (they have, at second glance, consequences the person cannot accept). I don't want to adjudicate the merits of this argument here. I only want to emphasise that even offering a conclusive argument to someone, with premises that they currently accept, is not enough to make them come to believe the conclusion.
+Many people will find the premises plausible, and the conclusion therefore compelling. This is part of the case for vegetarianism. But not everyone finds the conclusion acceptable; such people end up finding that one or both of the premises should be rejected. Interestingly, people may discover they still find the premises attractive even when they recognise a conclusion follows that they cannot bring themselves to accept. Here they find that there is some reason to accept the premises (perhaps they seem true at first glance), and some reason to reject them (they have, at second glance, consequences the person cannot accept). I don't want to adjudicate the merits of this argument here. I only want to emphasise that even offering a conclusive argument to someone, with premises that they currently accept, is not enough to \emph{make} them come to believe the conclusion.
 
 Sometimes people think that logic will provide a powerful tool to persuade and convince others of their point of view. They sometimes want to study logic as if it is some dark art enabling them to subdue beliefs that contradict their own. This is not really a very nice thing to want to do – to force a belief on someone, whether they want to believe it or not – and so it is not particularly regrettable that logic doesn't help you to do it. Logic can show which claims follow from which others, and which contradict one another. It can help us elaborate the content of some claim, or delineate the commitments a certain belief would incur. But logic does not tell you what to believe, even when you have a conclusive argument.
 
 
-The question, \emph{what ought I to believe?} is one of the deepest in the area of philosophy known as \define{epistemology}, the theory of knowledge. Logic is not able to answer that question all by itself. Even if logic tells you that there is a conclusive argument from premise \meta{A} to conclusion \meta{B}, logic can't tell you whether you ought to believe both, or reject both. However, logic will tell you something important, even if it is only a limited part of the answer to the question of rational belief. It will tell you that, when you know an argument to be conclusive, \emph{you cannot both accept its premises while rejecting its conclusion} – at least, not while being ideally rational. Thus conceived, logic is not even a science of reasoning, because it does not tell you what to think. Logic can't tell you, or anyone else, which packages of premises-and-conclusions to accept. (We return to the topic of logic and reasoning again in §§\ref{sec:arguments_and_reasoning_revisited},\ref{exfalso}.)
+The question, \emph{what ought I to believe?} is one of the deepest in the area of philosophy known as \define{epistemology}, the theory of knowledge. Logic is not able to answer that question all by itself. Even if logic tells you that there is a conclusive argument from premise \meta{A} to conclusion \meta{B}, logic can't tell you whether you ought to believe both, or reject both. However, logic will tell you something important, even if it is only a limited part of the answer to the question of rational belief. It will tell you that, when you know an argument to be conclusive, \emph{you cannot both accept its premises while rejecting its conclusion} – at least, not while being ideally rational. Thus conceived, logic is not even a science of reasoning, because it does not tell you what to think. Logic can tell you which packages of claims (premises and conclusions) can and cannot be simultaneously true together. But logic can't tell you, or anyone else, which packages of claims to accept.  (We return to the topic of logic and reasoning again in §§\ref{sec:arguments_and_reasoning_revisited},\ref{exfalso}.)
 
 
  \section{Conclusiveness for Special Reasons}
@@ -212,7 +212,7 @@ Again, because nothing can be both green all over and red all over, the truth of
 	\end{earg}
 The argument is inconclusive, since it is possible to be green all over and shiny all over. (I might paint my nails with an elegant shiny green varnish.) Plausibly, the conclusiveness of this argument is keyed to the way that colours (or colour-words) interact. But, whether or not that is right, it is not simply the form of the argument that makes it conclusive. 
 
- An argument can be conclusive due to its structure, and also be conclusive for other reasons. Arguably, this might be going on in the argument discussed at the end of §\ref{s:conclusiveargs}, with the premise `Oranges are not fruits'. Some people might think this premise has to be false, because of what oranges are. (Many will say that \emph{being a fruit} is an essential part of what it is to be an orange.) But if the premise `Oranges are not fruits' has to be false, it is not possible for the premises to be true. So it is not possible for premises to be true \emph{while} the conclusion is false. Hence the argument is conclusive – both because it has a good structure, but also because it has a premise that cannot be true.\footnote{When an argument has an impossible premise, any argument with that premise will be conclusive \emph{no matter what} the conclusion is! So this is a weird kind of case of conclusiveness. But nothing much really turns on it, and it is simpler to simply count it as conclusive than to try and separate out such `degenerate' cases of conclusive arguments. See also §\ref{s:neccandcont}.}
+An argument can be conclusive due to its structure, and also be conclusive for other reasons. Arguably, this might be going on in the argument discussed at the end of §\ref{s:conclusiveargs}, with the premise `Oranges are not fruits'. Some people might think this premise has to be false, because of what oranges are. (Many will say that \emph{being a fruit} is an essential part of what it is to be an orange.) But if the premise `Oranges are not fruits' has to be false, it is not possible for the premises to be true. So it is not possible for premises to be true \emph{while} the conclusion is false. Hence the argument is conclusive – both because it has a good structure, but also because it has a premise that cannot be true.\footnote{When an argument has an impossible premise, any argument with that premise will be conclusive \emph{no matter what} the conclusion is! So this is a weird kind of case of conclusiveness. But nothing much really turns on it, and it is simpler to simply count it as conclusive than to try and separate out such `degenerate' cases of conclusive arguments. See also §\ref{s:neccandcont}.}
 
 
 \section{Validity}\label{s:validityintro}
